--- a/main.css
+++ b/main.css
@@ -134,14 +134,16 @@ span, h1, h2 {
 
 .slider {
     -webkit-appearance: none;
-    width: 100%;
+    width: 80%;
     height: 15px;
     border-radius: 5px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
+    margin-bottom: 90;
     -webkit-transition: .2s;
     transition: opacity .2s;
+
 }
 
 .slider::-webkit-slider-thumb {
